MTX-358
Refactor detection code

* Fixed code formatting.
* Initialized `HostProperties` in `TelemetryManager`.
* Changed `final static` with `static final`.
* `MappingResource` is now `Serializable`.
* Code smells in `MatsyaClientsExecutor` is now fixed.
* Fixed `localhost` detection using NetworkHelper.isLocalhost().
* Fixed/enabled/formatted unit tests.